Updated wording in modal, added second photo in, adjusted logic so two ads can't be the same.

--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@ p {
 a {
   font-family: 'Heebo', sans-serif;
 }
+
+li {
+  color: #011627;
+  font-family: 'Heebo', sans-serif;
+  font-size: 18px;
+}
 /* End */
 
 .container {
